# OpenCVPlotTools

./: .gitignore  CMakeLists.txt  README.md
Examples/: Colormap_example.cpp  Histogram_example.cpp  Subplot_example.cpp
Tests/: TestColormap.cpp  TestHistogram.cpp
inc/: PlotUtils.h  colormap.h  emptyspace.h  histogram.h  paintertools.h  plotelementbase.h  subplot.h
src/: colormap.cpp  histogram.cpp  paintertools.cpp  plotelementbase.cpp  subplot.cpp
